--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -9,8 +9,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
         <li class="active"><a ng-href="#">Home</a></li>
-        <li><a ui-sref="people">People</a></li>
-        <li><a ng-href="company">Company</a></li>
+        <li><a ui-sref="user">User</a></li>
+        <li><a ui-sref="album">Album</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
